k8s/diag-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diag-web-service
spec:
  selector:
    app: diag-web
  ports:
  - port: 5001
    targetPort: 5001
  type: ClusterIP
