k8s/subnet-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subnet-web-service
spec:
  selector:
    app: subnet-web
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
